# snippetbox-rs

./: Cargo.toml  README.md
src/: handlers.rs  helpers.rs  main.rs  middleware.rs  routes.rs
src/models/: errors.rs  mod.rs  snippet.rs  users.rs
src/templates/: mod.rs
src/utils/: form_validation.rs  login_form_validation.rs  mod.rs  signup_form_validation.rs  validation_errors.rs
templates/: base.html
templates/pages/: create.html  home.html  login.html  signup.html  view.html
templates/partials/: nav.html
