[package]
name = "snippetbox-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.13.0"
axum = "0.8.3"
axum-extra = "0.10.1"
clap = { version = "4.5.35", features = ["derive"] }
env_logger = "0.11.7"
log = "0.4.27"
normalize-path = "0.2.1"
tokio = { version = "1.44.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
